--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,13 +4,13 @@ recurso.nao-encontrado=Recurso nao encontrado
 recurso.operacao-nao-permitida=Operacao nao permitida
 
 
-pessoa.nome=Nome
-pessoa.ativo=Ativo
-pessoa.inexistente-ou-inativa=Pessoa inexistente ou inativa para incluir no tarefa
+perfil.nome=Nome
+perfil.ativo=Ativo
+perfil.inexistente-ou-inativa=Pessoa inexistente ou inativa para incluir no tarefa
 
 tarefa.descricao=Descricao
 tarefa.dataVencimento=Data de vencimento
 tarefa.valor=Valor
 tarefa.tipo=Tipo
 tarefa.categoria=Categoria
-tarefa.pessoa=Pessoa
+tarefa.perfil=Pessoa
